# hammer-reweight

./: .ccls  .gitignore  .gitmodules  Makefile  README.md  flake.nix  requirements.txt  shell.nix
include/: const.h  utils.h  utils_general.h  utils_ham.h
nix/: default.nix  overlay.nix
nix/cymove/: default.nix
nix/ff_calc/: CMakeLists.txt  default.nix
nix/ff_calc/inc/: ff_dstaunu.hpp  ff_dtaunu.hpp
nix/ff_calc/src/: ff_dstaunu.cpp  ff_dtaunu.cpp
nix/hammer-phys/: default.nix
nix/overlay/: default.nix
nix/overlay/cymove/: default.nix
nix/overlay/ff_calc/: default.nix
nix/overlay/hammer-phys/: add_missing_header.patch  default.nix
samples/: rdx-run1-Bd2DstTauNu.root  rdx-run2-Bd2DststTauNu.root
spec/: rdx-run2.yml
src/: PrintMCDecay.cpp  ReweightRDX.cpp  ReweightRDXDefault.cpp  ReweightRDXDst10Sig.cpp  ReweightRDXDstNoCorr.cpp  ReweightRDXDstNoCorr10Sig.cpp  ReweightRDXDstRun1.cpp  ReweightRDXNonsenseDst.cpp  ReweightRDXRemoveRescale.cpp  ReweightRDXRun1Dst.cpp  ValidateRDX.cpp  print_mc_particle_id.cpp  rdx-run1-sample-merger.cpp  rdx-run1-sample.cpp  rdx-run1-step1.cpp
utils/: fltr_D_meson.py  gen_ham_params.py  gen_ham_params_no_rescale.py  plot_ratio.py
validation/: validate_ff_calc.cpp
validation/ff_calc/: CMakeLists.txt  Makefile
validation/ff_calc/cmake/: FindROOT.cmake
validation/ff_calc/inc/: ff_dstaunu.hpp
validation/ff_calc/src/: ff_dstaunu.cpp
